Fixed show contact page navs and services

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -67,6 +67,10 @@
   padding-top: 3em;
 }
 
+.ck-buttons__btn_nav{
+  margin-top: -0.5em !important;
+}
+
 .navbar .navbar-nav li a:hover {
   color: #B8B8B8 !important;
 }
