--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -58,7 +58,7 @@
           <li><%= link_to "Services", services_path%></li>
           <li><%= link_to "The Company", company_path%></li>
           <li><%= link_to "Blog", articles_path%></li>
-          <li><%= link_to "Request A Quote", "" %></li>
+          <li><%= link_to "Request A Quote",  new_contact_path %></li>
         </ul>
       </div>
       <div class="copyright">
