--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -10,7 +10,19 @@
               <hr>
               
               <div>
-                <h2>Technologies</h2>
+                <ul class="text-center">
+                  <li class="list-unstyled"> Responsive Design </li>
+                  <li class="list-unstyled"> Clean and Friendly UI</li>
+                  <li class="list-unstyled"> Bootstrap, Foundation or Materialize</li>
+                </ul>
+              </div>
+              
+              <div>
+                <h3>More</h3>
+                <p>
+                  CodeKrieg works with today's most used front-end technologies, like Bootstrap, Foundation or Materialize. <br> 
+                  We also make sure our web designs are responsive, clean and friendly for the users. 
+                </p>
               </div>
 			      </div>
 			      
@@ -22,8 +34,23 @@
               <hr>
               
               <div>
-                <h2>Technologies</h2>
+                <ul class="text-center">
+                  <li class="list-unstyled"> Ruby On Rails Based</li>
+                  <li class="list-unstyled"> Scalable Applications</li>
+                  <li class="list-unstyled"> Custom Made CMS</li>
+                </ul>
+                
               </div>
+              
+              <div>
+                <h3>More</h3>
+                <p>
+                  We currently are a Ruby on Rails based company, we develope bespoke web-based software (web applications) & unique web platforms.
+                  
+                </p>
+              </div>
+              
+              
 			      </div>
 			      
 			     <div class="ck-article ck-article--wysiwyg col-sm-4">
@@ -32,12 +59,30 @@
               </div>
               <hr>
               <div>
-                <h2>Technologies</h2>
+                <ul class="text-center">
+                  <li class="list-unstyled"> Technical Support</li>
+                  <li class="list-unstyled"> Hosting & Installation</li>
+                  <li class="list-unstyled"> Migration Support</li>
+                </ul>
+              </div>
+              
+              <div>
+                <h3>More</h3>
+                <p>
+                  We provide technical support on all of our applications, be it hosting, installation or maybe database migrations. 
+                </p>
               </div>
               
               </div>
 			      </div>
-			      
         </div>
     </div>
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <div class="ck-btns">
+              <%= link_to "Check Out Our Projects!", projects_path, class: "ck-buttons__btn btn btn-lg btn-warning" %>
+              <%= link_to "Or Hire Us!", new_contact_path, class: "ck-buttons__btn btn btn-lg btn-primary" %>
+            </div>
+        </div>
+      </div>
 </section>
