--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,7 +47,7 @@
             <div class="ck-section__container">
                 <div class="ck-section__container">
                     <div align="center">
-                        <a class="ck-buttons__btn btn btn-lg btn-default" href="#">Find More</a>
+                        <%= link_to "Find More", company_path, class: "ck-buttons__btn btn btn-lg btn-danger" %>
                     </div>
                  </div>
             </div>
@@ -115,7 +115,7 @@
                        <div class="row">
                            <div class="col-xs-12 padding-top-what-we-offer-button">
                                <div align="center">
-                                   <%= link_to "Learn More", "#", class: "btn btn-danger" %>
+                                   <%= link_to "Learn More", services_path, class: "ck-buttons__btn btn btn-lg btn-danger" %>
                                </div>
                            </div>
                        </div>
