--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,7 +32,10 @@
                       <%= link_to "Blog", articles_path %>
                   </li>
                   <li>
-                      <%= link_to "Request A Quote", new_contact_path %>
+                      <%# link_to "Request A Quote", new_contact_path, class: "ck-buttons__btn btn btn-success"%>
+                      <%= link_to new_contact_path do %>
+                        <button class="ck-buttons__btn_nav btn btn-success">Request A Quote</button>
+                      <% end %>
                   </li>
                   <% if logged_in? %>
                     <li><%= link_to 'Log out', logout_path, method: :delete %></li>
