--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -16,7 +16,7 @@
 </section>
 
 
-<section class="ck-section" id="content1-79">
+<section class="ck-section padding-top" id="content1-79">
     <div class="ck-section__container container ck-section__container--middle">
         <div class="row">
             <div class="ck-article ck-article--wysiwyg col-lg-12 col-xs-12 col-md-12">
