--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,83 +1,338 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
+  background: #fff;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  overflow-x: hidden;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 22px;
+  color: #000;
+}
+
+html {
+  height: 100%;
+}
+
+.ror-color {
+  color: #B02B2C;
+}
+
+a{
+  color:#C03035;
+}
+
+a:hover {
+  outline: none;
+  text-decoration:none;
+  color:#4fcccd;
+}
+
+a:focus {
+  outline:none;
+  outline-offset: 0;
+}
+
+a {
+  -webkit-transition: 300ms;
+  -moz-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
 }
 
 
-header {
-  text-align: center;
-  color: white;
-}
-.indexheader{
-    position: relative;
-    background: #000;
-    overflow: hidden;
-}
-.indexheader:before{
-    content: ' ';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    // z-index: 1;
-    opacity: 0.4;
-    background: url(https://images.unsplash.com/photo-1416339442236-8ceb164046f8?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=45bd30e23c10573d8084359be2e91847); 
-    background-size: 1399px 600px;
-    background-repeat: no-repeat;
-    background-position: 50% 0;
-    -ms-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-
-
-header .container {
-  padding-top: 100px;
-  padding-bottom: 50px;
-}
-header img {
-  display: block;
-  margin: 0 auto 20px;
+ul {
+  list-style: none;
 }
 
-.indexheader .intro-text .tagline {
-  font-size: 2em;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", "helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
 
-
-@media (min-width: 768px) {
-  .indexheader .container {
-    padding-top: 200px;
-    padding-bottom: 100px;
-  }
-  .indexheader .intro-text .name {
-    font-size: 4.75em;
-  }
-  .indexheader .intro-text .skills {
-    font-size: 1.75em;
-  }
+h1{
+  color: #686868;
 }
 
-.padding-top-form {
-  padding-top: 9.375em;
+h2{
+  font-size: 24px;
+  color: #686868;
 }
 
-.wysihtml5-sandbox{
-  height: 31.250em !important;
+h3{
+  font-size: 18px;
 }
 
-.ck-btns{
-  padding-bottom: 2.5em;
+.overflow{
+  overflow: hidden;
+}
+
+.uppercase{
+  text-transform: uppercase;
+}
+
+.btn-common {
+  font-size: 14px;
+  color: #0099ae;
+  border: 1px solid #0099ae;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  padding: 10px 25px;
+}
+
+#action .col-sm-5{
+  position: absolute;
+
+  top: 0;
+  height: 100%;
+  right: 0;
+}
+
+.btn-common:hover,
+.btn-common:focus{
+  outline: none;
+  background: none;
+  box-shadow: none;
+  color: #01707f;
+  border-color:#01707f;
+}
+
+.align-right{
+  text-align: right;
+}
+
+.inline{
+  display: inline-block;
+}
+
+.padding{
+  padding: 65px 0;
+}
+
+.padding-bottom{
+  padding-bottom: 65px;
+}
+
+.padding-top{
+  padding-top: 90px;
+}
+
+.padding-right{
+  padding-right: 80px;
+}
+
+.padding-left{
+  padding-left: 80px;
+}
+
+.margin-bottom{
+  margin-bottom: 35px;
+}
+
+// Landing page
+
+#first-section {
+  background: url('slider-bg.png') 0 100% repeat-x;
+  position: relative;
+}
+
+#first-section .first-section-text {
+  position: relative;
+  height: 450px;
+}
+
+#first-section .slide-text{
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 450px;
+}
+
+.animate-in .slide-text {
+  -webkit-animation: fadeInLeftBig 700ms cubic-bezier(0.190,1.000,0.220,1.000) 200ms both;
+  animation: fadeInLeftBig 700ms cubic-bezier(0.190,1.000,0.220,1.000) 200ms both;
+}
+
+#first-section .slider-hill {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.animate-in .slider-hill {
+  -webkit-animation: bounceInDown 1000ms ease-in-out 200ms both;
+  animation: bounceInDown 1000ms ease-in-out 200ms both;
+}
+
+#first-section .slider-house {
+  position: absolute;
+  right: 110px;
+  bottom: -30px;
+}
+
+.animate-in .slider-house {
+  -webkit-animation: bounceInDown 500ms ease-in-out 800ms both;
+  animation: bounceInDown 500ms ease-in-out 800ms both;
+}
+
+#first-section .slider-sun {
+  position: absolute;
+  right: 365px;
+  bottom: 100px;
+}
+
+.animate-in .slider-sun {
+  -webkit-animation: scaleIn 500ms ease-in-out 1200ms both;
+  animation: scaleIn 500ms ease-in-out 1200ms both;
+}
+
+#first-section .slider-birds1 {
+  position: absolute;
+  right: 470px;
+  bottom: 75px;
+}
+
+.animate-in .slider-birds1 {
+  -webkit-animation: fadeInLeft 500ms ease-in-out 1200ms both;
+  animation: fadeInLeft 500ms ease-in-out 1200ms both;
+}
+
+#first-section .slider-birds2 {
+  position: absolute;
+  right: 40px;
+  bottom: 150px;
+}
+
+.animate-in .slider-birds2 {
+  -webkit-animation: fadeInRight 500ms ease-in-out 1200ms both;
+  animation: fadeInRight 500ms ease-in-out 1200ms both;
+}
+
+
+#first-section h1{
+  margin-top: 100px;
+  margin-bottom: 25px;
+}
+
+#first-section .btn-common {
+  margin-top: 20px;
+}
+
+#first-section .preloader {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: -30px;
+  right: 0;
+  background: #fafafa;
+  text-align: center;
+}
+
+#first-section .preloader > i {
+  font-size: 48px;
+  height: 48px;
+  line-height: 48px;
+  color: #00aeef;
+  position: absolute;
+  left: 50%;
+  margin-left: -24px;
+  top: 50%;
+  margin-top: -24px;
+}
+
+#action {
+  background-image: url('tour-bg.png');
+  background-color: #fbfafa;
+  background-repeat: repeat-x;
+  height: 157px;
+  background-position: center;
+  display: table;
+  position: static;
+  width: 100%;
+}
+
+.vertical-center{
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  position: statice;
+}
+
+
+.single-service{
+  overflow: hidden;
+  display: block;
+}
+
+.single-service img {
+  margin-bottom: 35px;
+}
+
+.single-service .fold {
+  margin-bottom: 35px;
+}
+
+.single-service h2 {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+.single-service p {
+  padding: 0 48px;
+}
+
+.action h1{
+  margin-top: 0;
+}
+
+.action p{
+  font-size: 18px;
+  margin-bottom: 0;
+  font-weight: 300;
+}
+
+.action .btn-common{
+  margin-top: 55px;
+  float: left;
+}
+
+.title {
+  color: #404040;
+  font-weight: 300;
+}
+
+.single-features {
+  overflow: hidden;
+  padding-top: 65px;
+  padding-bottom: 40px;
+}
+
+.single-features .col-sm-6 {
+  margin-top: 50px;
+}
+
+.single-features:last-child {
+  padding-bottom: 95px;
+  padding-top: 0;
+}
+
+.single-features h2{
+  margin-bottom: 15px;
+}
+
+#clients{
+  padding-bottom: 45px;
+}
+
+.clients {
+  margin-bottom: 45px;
+}
+
+.clients img {
+  display: inline-block;
+}
+
+
+.clients-logo {
+  overflow: hidden;
+  margin-bottom: 10px;
 }
