--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,41 +4,41 @@
 
 // User Profile Page Stylings
 
-header {
-  text-align: center;
-  background: #157A8C;
-  color: white;
-}
-header .container {
-  padding-top: 100px;
-  padding-bottom: 50px;
-}
-header img.userpic {
-  display: block;
-  margin: 0 auto 20px;
-  border: #fff solid 0.15em;
-  border-radius: 50%;
-}
-header .intro-text .name {
-  display: block;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 2em;
-}
-header .intro-text .skills {
-  font-size: 1.25em;
-  font-weight: 300;
-}
-@media (min-width: 768px) {
-  header .container {
-    padding-top: 200px;
-    padding-bottom: 100px;
-  }
-  header .intro-text .name {
-    font-size: 4.75em;
-  }
-  header .intro-text .skills {
-    font-size: 1.75em;
-  }
-}
+// header {
+//   text-align: center;
+//   background: #157A8C;
+//   color: white;
+// }
+// header .container {
+//   padding-top: 100px;
+//   padding-bottom: 50px;
+// }
+// header img.userpic {
+//   display: block;
+//   margin: 0 auto 20px;
+//   border: #fff solid 0.15em;
+//   border-radius: 50%;
+// }
+// header .intro-text .name {
+//   display: block;
+//   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+//   text-transform: uppercase;
+//   font-weight: 700;
+//   font-size: 2em;
+// }
+// header .intro-text .skills {
+//   font-size: 1.25em;
+//   font-weight: 300;
+// }
+// @media (min-width: 768px) {
+//   header .container {
+//     padding-top: 200px;
+//     padding-bottom: 100px;
+//   }
+//   header .intro-text .name {
+//     font-size: 4.75em;
+//   }
+//   header .intro-text .skills {
+//     font-size: 1.75em;
+//   }
+// }
