--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,6 +7,12 @@
                     <div class="caption">
                         <h3 class="ck-header__text"><%= @article.title %>&nbsp;</h3>
                         <p> { Author: <%= @article.user.username %> }</p>
+                         <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+                            <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary"%>
+                            <%= link_to "Delete this article", article_path(@article), method: :delete,
+                                                                data: {confirm: "Are you sure you want to delete this article?"}, 
+                                                                class: "btn btn-xs btn-danger" %>
+                        <% end %>      
                     </div>
                 </div>
             </div>
