--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -38,6 +38,7 @@
                     <li><%= nav_link "Blog", articles_path %></li>
                     <li><%= nav_link "The Company", company_path %></li>
                     <li><%= nav_link "Request A Quote", new_contact_path %></li>
+                    <li><%= link_to "Logout", logout_path, method: :delete %></li>
                 </ul>
             </div>
         </div>
