--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,8 +36,13 @@
                     <address>
                     Via Giuseppe Benedetto Dusmet, 
                     16, 001678 <br> 
-                    Lazio, <br> 
-                    Rome <br> 
+                    Rome, Lazio. <br> 
+                    Italy <br>
+                    <br>
+                    B-4 Kachnar City, <br>
+                    48002 <br>
+                    Jabalpur, Madhya Pradesh <br>
+                    India 
                     </address>
 
                 </div>
