--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
                 <div align="center">
                     <h1>We Are <span class="ror-color">CodeKrieg</span></h1>
                     <p>A Ruby on Rails Development Company</p>
-                    <a href="#" class="btn btn-common">FIND MORE</a>
+                    <%= link_to "FIND MORE", company_path, class: "btn btn-common" %>
                 </div>
             </div>
         </div>
